# device-fleet-management-service

./: .gitignore  CMakeLists.txt  LICENSE  README.md
client/: cli.py
proto/: CMakeLists.txt  device.proto
server/: ActionManager.cpp  ActionManager.h  CMakeLists.txt  DeviceServiceImpl.cpp  DeviceServiceImpl.h  Logger.h  Validations.h  deviceManager.cpp  deviceManager.h  main.cpp
tests/: ActionManagerTest.h  CMakeLists.txt  DeviceManagerTest.h  runner.cpp
tests/mocks/: MockDeviceManager.h
